k8s/02-application/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-hello-world
  labels:
    name: go-hello-world
    module: Namespace
